--- a/hugo.toml
+++ b/hugo.toml
@@ -1,8 +1,11 @@
 baseURL = 'https://multsec.github.io/'
 languageCode = 'en-us'
-title = 'MMultSec Documentation'
+title = 'MultSec Documentation'
 
 [module]
+    # uncomment line below for temporary local development of module,
+    # when using a 'theme' as a git submodule or git cloned files
+    replacements = "github.com/colinwilson/lotusdocs -> lotusdocs"
     [[module.imports]]
         path = "github.com/colinwilson/lotusdocs"
         disable = false
